--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <ul class="team-list">
             <li class="workers-cont">
               <img
-                src="./images/mark-guerrero.jpg"
+                src="./images/workers/mark-guerrero.jpg"
                 width="264"
                 height="200"
                 alt="man-1"
@@ -316,7 +316,7 @@
             </li>
             <li class="workers-cont">
               <img
-                src="./images/tom-ford.jpg"
+                src="./images/workers/tom-ford.jpg"
                 width="264"
                 height="200"
                 alt="man-2"
@@ -328,7 +328,7 @@
             </li>
             <li class="workers-cont">
               <img
-                src="./images/camila-garcia.jpg"
+                src="./images/workers/camila-garcia.jpg"
                 width="264"
                 height="200"
                 alt="woman-1"
@@ -340,7 +340,7 @@
             </li>
             <li class="workers-cont">
               <img
-                src="./images/daniel-wilson.jpg"
+                src="./images/workers/daniel-wilson.jpg"
                 width="264"
                 height="200"
                 alt="man-3"
