add second secton svg

--- a/index.html
+++ b/index.html
@@ -80,12 +80,8 @@
           <ul class="list-about">
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg antenna">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-antenna"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg antenna" width="64" height="64">
+                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Strategy</h3>
@@ -96,12 +92,8 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg clock">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-clock"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg clock" width="64" height="64">
+                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Punctuality</h3>
@@ -112,12 +104,8 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg diagram">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-diagram"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg diagram" width="64" height="64">
+                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Diligence</h3>
@@ -128,12 +116,8 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg astronaut">
-                  <use
-                    xlink:href="./images/symbol-defs.svg#icon-astronaut"
-                    width="64"
-                    height="64"
-                  ></use>
+                <svg class="svg astronaut" width="64" height="64">
+                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Technologies</h3>
