--- a/images/svg/demo-external-svg.html
+++ b/images/svg/demo-external-svg.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="demo-files/demo.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header class="bgc1 clearfix">
@@ -17,22 +17,22 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-antenna-1"><use xlink:href="symbol-defs.svg#icon-antenna-1"></use></svg><span class="name"> icon-antenna-1</span>
+                <svg class="icon icon-antenna"><use xlink:href="symbol-defs.svg#icon-antenna"></use></svg><span class="name"> icon-antenna</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-astronaut-1"><use xlink:href="symbol-defs.svg#icon-astronaut-1"></use></svg><span class="name"> icon-astronaut-1</span>
+                <svg class="icon icon-astronaut"><use xlink:href="symbol-defs.svg#icon-astronaut"></use></svg><span class="name"> icon-astronaut</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-clock-1"><use xlink:href="symbol-defs.svg#icon-clock-1"></use></svg><span class="name"> icon-clock-1</span>
+                <svg class="icon icon-clock"><use xlink:href="symbol-defs.svg#icon-clock"></use></svg><span class="name"> icon-clock</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-diagram-1"><use xlink:href="symbol-defs.svg#icon-diagram-1"></use></svg><span class="name"> icon-diagram-1</span>
+                <svg class="icon icon-diagram"><use xlink:href="symbol-defs.svg#icon-diagram"></use></svg><span class="name"> icon-diagram</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -42,12 +42,12 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse-1"><use xlink:href="symbol-defs.svg#icon-Ellipse-1"></use></svg><span class="name"> icon-Ellipse-1</span>
+                <svg class="icon icon-Ellipse"><use xlink:href="symbol-defs.svg#icon-Ellipse"></use></svg><span class="name"> icon-Ellipse-1</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse-2"><use xlink:href="symbol-defs.svg#icon-Ellipse-2"></use></svg><span class="name"> icon-Ellipse-2</span>
+                <svg class="icon icon-Ellipse"><use xlink:href="symbol-defs.svg#icon-Ellipse-2"></use></svg><span class="name"> icon-Ellipse-2</span>
             </div>
         </div>
         <div class="glyph fs1">
