--- a/index.html
+++ b/index.html
@@ -150,28 +150,28 @@
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use href="#"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use href="#"></use>
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use href="#"></use>
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use href="#"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -188,6 +188,36 @@
               <div class="workers">
                 <h3 class="title-names">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
+                <ul>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="workers-cont">
@@ -200,6 +230,36 @@
               <div class="workers">
                 <h3 class="title-names">Camila Garcia</h3>
                 <p class="position">Marketing</p>
+                <ul>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="workers-cont">
@@ -212,6 +272,36 @@
               <div class="workers">
                 <h3 class="title-names">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
+                <ul>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social">
+                    <a href="" class="social-link">
+                      <svg class="svg social-svg" width="16" height="16">
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
