--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li class="list-two-item">
               <div class="svg-cont">
                 <svg class="svg antenna" width="64" height="64">
-                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-antenna"></use>
+                  <use href="./images/svg/symbol-defs(copy).svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Strategy</h3>
@@ -93,7 +93,7 @@
             <li class="list-two-item">
               <div class="svg-cont">
                 <svg class="svg clock" width="64" height="64">
-                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-clock"></use>
+                  <use href="./images/svg/symbol-defs(copy).svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Punctuality</h3>
@@ -105,7 +105,7 @@
             <li class="list-two-item">
               <div class="svg-cont">
                 <svg class="svg diagram" width="64" height="64">
-                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-diagram"></use>
+                  <use href="./images/svg/symbol-defs(copy).svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Diligence</h3>
@@ -117,7 +117,7 @@
             <li class="list-two-item">
               <div class="svg-cont">
                 <svg class="svg astronaut" width="64" height="64">
-                  <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-astronaut"></use>
+                  <use href="./images/svg/symbol-defs(copy).svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="sec-two-list-title">Technologies</h3>
@@ -157,14 +157,14 @@
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -199,14 +199,14 @@
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -241,14 +241,14 @@
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -283,14 +283,14 @@
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
-                        <use xlink:href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
+                        <use href="./images/svg/symbol-defs(copy).svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
