--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="logo" href="/index.html">Web<span>Studio</span></a>
           <ul class="nav-list">
             <li>
-              <a class="list-link" href="./index.html">Studio</a>
+              <a class="list-link current" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="list-link" href="">Portfolio</a>
