design social icons

--- a/images/icons/demo-external-svg.html
+++ b/images/icons/demo-external-svg.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="demo-files/demo.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="bgc1 clearfix">
@@ -37,22 +37,22 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse"><use xlink:href="symbol-defs.svg#icon-Ellipse"></use></svg><span class="name"> icon-Ellipse</span>
+                <svg class="icon icon-facebook"><use xlink:href="symbol-defs.svg#icon-facebook"></use></svg><span class="name"> icon-facebook</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse"><use xlink:href="symbol-defs.svg#icon-Ellipse"></use></svg><span class="name"> icon-Ellipse-1</span>
+                <svg class="icon icon-instagram"><use xlink:href="symbol-defs.svg#icon-instagram"></use></svg><span class="name"> icon-instagram</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse"><use xlink:href="symbol-defs.svg#icon-Ellipse-2"></use></svg><span class="name"> icon-Ellipse-2</span>
+                <svg class="icon icon-linkedin"><use xlink:href="symbol-defs.svg#icon-linkedin"></use></svg><span class="name"> icon-linkedin</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Ellipse-3"><use xlink:href="symbol-defs.svg#icon-Ellipse-3"></use></svg><span class="name"> icon-Ellipse-3</span>
+                <svg class="icon icon-twitter"><use xlink:href="symbol-defs.svg#icon-twitter"></use></svg><span class="name"> icon-twitter</span>
             </div>
         </div>
   </div>
