--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               <div class="workers">
                 <h3 class="title-names">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
-                <ul>
+                <ul class="social-list">
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
@@ -188,7 +188,7 @@
               <div class="workers">
                 <h3 class="title-names">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
-                <ul>
+                <ul class="social-list">
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
@@ -230,7 +230,7 @@
               <div class="workers">
                 <h3 class="title-names">Camila Garcia</h3>
                 <p class="position">Marketing</p>
-                <ul>
+                <ul class="social-list">
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
@@ -272,7 +272,7 @@
               <div class="workers">
                 <h3 class="title-names">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
-                <ul>
+                <ul class="social-list">
                   <li class="social">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
@@ -296,7 +296,7 @@
                   </li>
                   <li class="social">
                     <a href="" class="social-link">
-                      <svg class="svg social-svg" width="16" height="16">
+                      <svg class="svg social-svg" width="26" height="26">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
