--- a/index.html
+++ b/index.html
@@ -147,28 +147,28 @@
                 <h3 class="title-names">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
                 <ul class="social-list">
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -189,28 +189,28 @@
                 <h3 class="title-names">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
                 <ul class="social-list">
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -231,28 +231,28 @@
                 <h3 class="title-names">Camila Garcia</h3>
                 <p class="position">Marketing</p>
                 <ul class="social-list">
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -273,30 +273,30 @@
                 <h3 class="title-names">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
                 <ul class="social-list">
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
                       <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social">
+                  <li class="social-item">
                     <a href="" class="social-link">
-                      <svg class="svg social-svg" width="26" height="26">
+                      <svg class="svg social-svg" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
