add transition for list

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <ul class="list-about">
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg antenna" width="64" height="64">
+                <svg class="svg-antenna" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -92,7 +92,7 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg clock" width="64" height="64">
+                <svg class="svg-clock" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg diagram" width="64" height="64">
+                <svg class="svg-diagram" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -116,7 +116,7 @@
             </li>
             <li class="list-two-item">
               <div class="svg-cont">
-                <svg class="svg astronaut" width="64" height="64">
+                <svg class="svg-astronaut" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
