--- a/index.html
+++ b/index.html
@@ -315,72 +315,114 @@
           <h2 class="portfolio">Our Portfolio</h2>
           <ul class="list-portfolio">
             <li class="app-cont">
-              <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Banking App</h3>
                 <p class="position">App</p>
               </div>
             </li>
             <li class="app-cont">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Cashless Payment</h3>
                 <p class="position">Marketing</p>
               </div>
             </li>
             <li class="app-cont">
-              <img
-                src="./images/meditaion-app.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/meditaion-app.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Meditation App</h3>
                 <p class="position">App</p>
               </div>
             </li>
             <li class="app-cont">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Taxi Service</h3>
                 <p class="position">Marketing</p>
               </div>
             </li>
             <li class="app-cont">
-              <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Screen Illustrations</h3>
                 <p class="position">Design</p>
               </div>
             </li>
             <li class="app-cont">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="image-cont">
+                <p class="image-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+              </div>
               <div class="app">
                 <h3 class="title-names">Online Courses</h3>
                 <p class="position">Marketing</p>
