--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/banking-app.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
+                  src="./images/banking-app.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -336,10 +336,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -355,10 +355,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/meditaion-app.jpg"
-                alt="Meditaion App"
-                width="360"
-                height="300"
+                  src="./images/meditaion-app.jpg"
+                  alt="Meditaion App"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -374,10 +374,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -393,10 +393,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -412,10 +412,10 @@
             <li class="app-cont">
               <div class="image-cont">
                 <img
-                src="./images/online-courses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
                 />
                 <p class="image-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -437,6 +437,7 @@
 
     <footer class="footer">
       <div class="container footer-cont">
+
         <a class="footer-logo-cont" href="./index.html"
           >Web<span class="footer-logo">Studio</span></a
         >
@@ -444,6 +445,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-social-cont">
+        <p class="footer-social-text"></p>
+        <ul class="footer-list">
+          <li>
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg">
+                <use href=""></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg">
+                <use href=""></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg">
+                <use href=""></use>
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="" class="footer-social-link">
+              <svg class="footer-social-svg">
+                <use href=""></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
