--- a/index.html
+++ b/index.html
@@ -437,47 +437,48 @@
 
     <footer class="footer">
       <div class="container footer-cont">
-
-        <a class="footer-logo-cont" href="./index.html"
-          >Web<span class="footer-logo">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-social-cont">
-        <p class="footer-social-text"></p>
-        <ul class="footer-list">
-          <li>
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-svg">
-                <use href=""></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-svg">
-                <use href=""></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-svg">
-                <use href=""></use>
-              </svg>
-            </a>
-          </li>
-          <li>
-            <a href="" class="footer-social-link">
-              <svg class="footer-social-svg">
-                <use href=""></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="aside">
+          <a class="footer-logo-cont" href="./index.html"
+            >Web<span class="footer-logo">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-social-cont">
+          <p class="footer-social-text">Social media</p>
+          <ul class="footer-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-social-svg" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
